Add nginx config for prod.

--- a/etc/nginx-prod.conf
+++ b/etc/nginx-prod.conf
@@ -1,17 +1,18 @@
 server {
-    server_name             mongrate.com.dev;
+    server_name             mongrate.com;
     listen                  80;
     root                    /home/mongrate/project/mongrate.com/_site;
     client_max_body_size    20k;
     server_tokens           off;
+    access_log              /home/mongrate/logs/access.log;
     error_log               /home/mongrate/logs/errors.log;
 
     if ($request_method != "GET" ) {
         return 405;
     }
 
-    rewrite ^/download /downloads/mongrate.phar break;
-    rewrite ^/sample-config.yml /downloads/sample-config.yml break;
+    rewrite /download /downloads/mongrate.phar break;
+    rewrite /sample-config.yml /downloads/sample-config.yml break;
 
     rewrite ^/([\/a-z0-9-]+)$ /$1.html break;
 }
