Misc fixes for problems found in server logs / by Google Bot.

--- a/etc/nginx-prod.conf
+++ b/etc/nginx-prod.conf
@@ -13,6 +13,7 @@ server {
 
     rewrite /download /downloads/mongrate.phar break;
     rewrite /sample-config.yml /downloads/sample-config.yml break;
+    rewrite /robots.txt /etc/robots.txt break;
 
     rewrite ^/([\/a-z0-9-]+)$ /$1.html break;
 }
