Redirect all 'www.' requests to the non-www host.

--- a/etc/nginx-prod.conf
+++ b/etc/nginx-prod.conf
@@ -17,3 +17,10 @@ server {
 
     rewrite ^/([\/a-z0-9-]+)$ /$1.html break;
 }
+
+# Redirect all 'www.' requests to the non-www host.
+server {
+    server_name             www.mongrate.com;
+    listen                  80;
+    rewrite                 ^ http://mongrate.com$request_uri? permanent;
+}
