--- a/etc/nginx-prod.conf
+++ b/etc/nginx-prod.conf
@@ -1,7 +1,7 @@
 server {
-    server_name             mongrate.com;
+    server_name             mongrate.amyboyd.co.uk;
     listen                  80;
-    root                    /home/mongrate/project/mongrate.com/_site;
+    root                    /home/mongrate/project/mongrate.amyboyd.co.uk/_site;
     client_max_body_size    20k;
     server_tokens           off;
     access_log              /home/mongrate/logs/access.log;
@@ -16,11 +16,4 @@ server {
     rewrite /robots.txt /etc/robots.txt break;
 
     rewrite ^/([\/a-z0-9-]+)$ /$1.html break;
-}
-
-# Redirect all 'www.' requests to the non-www host.
-server {
-    server_name             www.mongrate.com;
-    listen                  80;
-    rewrite                 ^ http://mongrate.com$request_uri? permanent;
 }
