--- a/etc/nginx.conf
+++ b/etc/nginx.conf
@@ -1,7 +1,7 @@
 server {
-    server_name             mongrate.com.dev;
+    server_name             mongrate.amyboyd.co.uk.dev;
     listen                  80;
-    root                    /home/mongrate/project/mongrate.com/_site;
+    root                    /home/mongrate/project/mongrate.amyboyd.co.uk/_site;
     client_max_body_size    20k;
     server_tokens           off;
     error_log               /home/mongrate/logs/errors.log;
